@@ -1,3 +1,11 @@
+2011-11-27  Stefan Sauer  <ensonic@users.sf.net>
+
+	* dllwrapper/wine/ext.c:
+	* dllwrapper/wine/pe_image.c:
+	* dllwrapper/wine/registry.c:
+	* dllwrapper/wine/win32.c:
+	  Fix set-but-unused warnings.
+
 2011-10-07  Stefan Sauer  <ensonic@users.sf.net>
 
 	* AUTHORS:
